--- a/Starter_Code/credit_risk_resampling.ipynb
+++ b/Starter_Code/credit_risk_resampling.ipynb
@@ -242,10 +242,12 @@
    ],
    "source": [
     "# Read the CSV file from the Resources folder into a Pandas DataFrame\n",
-    "# YOUR CODE HERE!\n",
+    "lending_data_df = pd.read_csv(\n",
+    "    Path('./Resources/lending_data.csv')\n",
+    ")\n",
     "\n",
-    "# Review the DataFrame\n",
-    "# YOUR CODE HERE!"
+    "# Reviewed the DataFrame\n",
+    "lending_data_df.head()"
    ]
   },
   {
@@ -261,12 +263,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Separate the data into labels and features\n",
+    "# Separated the data into labels and features\n",
     "\n",
-    "# Separate the y variable, the labels\n",
+    "# Separated the y variable, the labels\n",
     "# YOUR CODE HERE!]\n",
     "\n",
-    "# Separate the X variable, the features\n",
+    "# Separated the X variable, the features\n",
     "# YOUR CODE HERE!"
    ]
   },
@@ -292,7 +294,7 @@
     }
    ],
    "source": [
-    "# Review the y variable Series\n",
+    "# Reviewed the y variable Series\n",
     "# YOUR CODE HERE!"
    ]
   },
@@ -438,7 +440,7 @@
     }
    ],
    "source": [
-    "# Check the balance of our target values\n",
+    "# Checked the balance of our target values\n",
     "# YOUR CODE HERE!"
    ]
   },
@@ -455,11 +457,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the train_test_learn module\n",
+    "# Imported the train_test_learn module\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Split the data using train_test_split\n",
-    "# Assign a random_state of 1 to the function\n",
+    "# Assigned a random_state of 1 to the function\n",
     "# YOUR CODE HERE!"
    ]
   },
@@ -501,11 +503,11 @@
     }
    ],
    "source": [
-    "# Import the LogisticRegression module from SKLearn\n",
+    "# Imported the LogisticRegression module from SKLearn\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "# Instantiate the Logistic Regression model\n",
-    "# Assign a random_state parameter of 1 to the model\n",
+    "# Instantiated the Logistic Regression model\n",
+    "# Assigned a random_state parameter of 1 to the model\n",
     "# YOUR CODE HERE!\n",
     "\n",
     "# Fit the model using training data\n",
@@ -525,7 +527,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make a prediction using the testing data\n",
+    "# Made a prediction using the testing data\n",
     "# YOUR CODE HERE!"
    ]
   },
@@ -559,7 +561,7 @@
     }
    ],
    "source": [
-    "# Print the balanced_accuracy score of the model\n",
+    "# Printed the balanced_accuracy score of the model\n",
     "# YOUR CODE HERE!"
    ]
   },
@@ -581,7 +583,7 @@
     }
    ],
    "source": [
-    "# Generate a confusion matrix for the model\n",
+    "# Generated a confusion matrix for the model\n",
     "# YOUR CODE HERE!"
    ]
   },
@@ -605,7 +607,7 @@
     }
    ],
    "source": [
-    "# Print the classification report for the model\n",
+    "# Printed the classification report for the model\n",
     "# YOUR CODE HERE!"
    ]
   },
@@ -652,11 +654,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the RandomOverSampler module form imbalanced-learn\n",
+    "# Imported the RandomOverSampler module form imbalanced-learn\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
     "\n",
-    "# Instantiate the random oversampler model\n",
-    "# # Assign a random_state parameter of 1 to the model\n",
+    "# Instantiated the random oversampler model\n",
+    "# Assigned a random_state parameter of 1 to the model\n",
     "# YOUR CODE HERE!\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
@@ -682,7 +684,7 @@
     }
    ],
    "source": [
-    "# Count the distinct values of the resampled labels data\n",
+    "# Counted the distinct values of the resampled labels data\n",
     "# YOUR CODE HERE!"
    ]
   },
@@ -699,14 +701,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Instantiate the Logistic Regression model\n",
-    "# Assign a random_state parameter of 1 to the model\n",
+    "# Instantiated the Logistic Regression model\n",
+    "# Assigned a random_state parameter of 1 to the model\n",
     "# YOUR CODE HERE!\n",
     "\n",
     "# Fit the model using the resampled training data\n",
     "# YOUR CODE HERE!\n",
     "\n",
-    "# Make a prediction using the testing data\n",
+    "# Made a prediction using the testing data\n",
     "# YOUR CODE HERE!"
    ]
   },
@@ -740,7 +742,7 @@
     }
    ],
    "source": [
-    "# Print the balanced_accuracy score of the model \n",
+    "# Printed the balanced_accuracy score of the model \n",
     "# YOUR CODE HERE!"
    ]
   },
@@ -762,7 +764,7 @@
     }
    ],
    "source": [
-    "# Generate a confusion matrix for the model\n",
+    "# Generated a confusion matrix for the model\n",
     "# YOUR CODE HERE!"
    ]
   },
@@ -786,7 +788,7 @@
     }
    ],
    "source": [
-    "# Print the classification report for the model\n",
+    "# Printed the classification report for the model\n",
     "# YOUR CODE HERE!"
    ]
   },
@@ -809,9 +811,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (dev)",
    "language": "python",
-   "name": "python3"
+   "name": "dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -823,7 +825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
