--- a/Starter_Code/credit_risk_resampling.ipynb
+++ b/Starter_Code/credit_risk_resampling.ipynb
@@ -266,10 +266,10 @@
     "# Separated the data into labels and features\n",
     "\n",
     "# Separated the y variable, the labels\n",
-    "# YOUR CODE HERE!]\n",
+    "y = lending_data_df['loan_status']\n",
     "\n",
     "# Separated the X variable, the features\n",
-    "# YOUR CODE HERE!"
+    "X = lending_data_df.drop(columns=['loan_status'])"
    ]
   },
   {
@@ -280,12 +280,18 @@
     {
      "data": {
       "text/plain": [
-       "0    0\n",
-       "1    0\n",
-       "2    0\n",
-       "3    0\n",
-       "4    0\n",
-       "Name: loan_status, dtype: int64"
+       "0        0\n",
+       "1        0\n",
+       "2        0\n",
+       "3        0\n",
+       "4        0\n",
+       "        ..\n",
+       "77531    1\n",
+       "77532    1\n",
+       "77533    1\n",
+       "77534    1\n",
+       "77535    1\n",
+       "Name: loan_status, Length: 77536, dtype: int64"
       ]
      },
      "execution_count": 4,
@@ -295,7 +301,7 @@
    ],
    "source": [
     "# Reviewed the y variable Series\n",
-    "# YOUR CODE HERE!"
+    "y"
    ]
   },
   {
@@ -304,114 +310,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>loan_size</th>\n",
-       "      <th>interest_rate</th>\n",
-       "      <th>borrower_income</th>\n",
-       "      <th>debt_to_income</th>\n",
-       "      <th>num_of_accounts</th>\n",
-       "      <th>derogatory_marks</th>\n",
-       "      <th>total_debt</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10700.0</td>\n",
-       "      <td>7.672</td>\n",
-       "      <td>52800</td>\n",
-       "      <td>0.431818</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>22800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8400.0</td>\n",
-       "      <td>6.692</td>\n",
-       "      <td>43600</td>\n",
-       "      <td>0.311927</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9000.0</td>\n",
-       "      <td>6.963</td>\n",
-       "      <td>46100</td>\n",
-       "      <td>0.349241</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10700.0</td>\n",
-       "      <td>7.664</td>\n",
-       "      <td>52700</td>\n",
-       "      <td>0.430740</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>22700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10800.0</td>\n",
-       "      <td>7.698</td>\n",
-       "      <td>53000</td>\n",
-       "      <td>0.433962</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   loan_size  interest_rate  borrower_income  debt_to_income  num_of_accounts  \\\n",
-       "0    10700.0          7.672            52800        0.431818                5   \n",
-       "1     8400.0          6.692            43600        0.311927                3   \n",
-       "2     9000.0          6.963            46100        0.349241                3   \n",
-       "3    10700.0          7.664            52700        0.430740                5   \n",
-       "4    10800.0          7.698            53000        0.433962                5   \n",
-       "\n",
-       "   derogatory_marks  total_debt  \n",
-       "0                 1       22800  \n",
-       "1                 0       13600  \n",
-       "2                 0       16100  \n",
-       "3                 1       22700  \n",
-       "4                 1       23000  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-9f4593107dfb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Review the X variable DataFrame\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
     }
    ],
    "source": [
     "# Review the X variable DataFrame\n",
-    "# YOUR CODE HERE!"
+    "x"
    ]
   },
   {
