created logistical progression model with resampled training data. tested the model's performance.

--- a/Starter_Code/credit_risk_resampling.ipynb
+++ b/Starter_Code/credit_risk_resampling.ipynb
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,33 +925,33 @@
     "\n",
     "# Instantiated the random oversampler model\n",
     "# Assigned a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "random_oversampler = RandomOverSampler(random_state=1)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "# YOUR CODE HERE!"
+    "x_resampled, y_resampled = random_oversampler.fit_resample(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    56271\n",
        "0    56271\n",
+       "1    56271\n",
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Counted the distinct values of the resampled labels data\n",
-    "# YOUR CODE HERE!"
+    "y_resampled.value_counts()"
    ]
   },
   {
@@ -963,19 +963,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiated the Logistic Regression model\n",
     "# Assigned a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "logistic_regression = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "# YOUR CODE HERE!\n",
+    "logistic_regression.fit(x_resampled, y_resampled)\n",
     "\n",
     "# Made a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "y_prediction = linear_regression.predict(x_test)"
    ]
   },
   {
@@ -993,50 +993,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9936781215845847"
+       "0.9520479254722232"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Printed the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
+    "balanced_accuracy_score(y_test, y_prediction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[18649,   116],\n",
-       "       [    4,   615]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[18663   102]\n",
+      " [   56   563]]\n"
+     ]
     }
    ],
    "source": [
     "# Generated a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "print(confusion_matrix(y_test, y_prediction))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1045,17 +1042,17 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "          0       1.00      0.99      0.99      1.00      0.99      0.99     18765\n",
-      "          1       0.84      0.99      0.99      0.91      0.99      0.99       619\n",
+      "          0       1.00      0.99      0.91      1.00      0.95      0.91     18765\n",
+      "          1       0.85      0.91      0.99      0.88      0.95      0.90       619\n",
       "\n",
-      "avg / total       0.99      0.99      0.99      0.99      0.99      0.99     19384\n",
+      "avg / total       0.99      0.99      0.91      0.99      0.95      0.91     19384\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Printed the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "print(classification_report_imbalanced(y_test, y_prediction))"
    ]
   },
   {
@@ -1071,7 +1068,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** Although the results of both models seem to conclude with similar accuracy, it appears that the logistic regression model is slightly more accurate in this scenario. "
    ]
   }
  ],
