finished comments. Fixed typos. Coding complete.

--- a/Starter_Code/credit_risk_resampling.ipynb
+++ b/Starter_Code/credit_risk_resampling.ipynb
@@ -1068,7 +1068,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** Although the results of both models seem to conclude with similar accuracy, it appears that the logistic regression model is slightly more accurate in this scenario. "
+    "**Answer:** Although the results of both models seem to conclude with similar accuracy, it appears that the logistic regression model is slightly more accurate in this scenario than the linear regression model. "
    ]
   }
  ],
